--- a/app/src/main/res/layout/viewpager_layout.xml
+++ b/app/src/main/res/layout/viewpager_layout.xml
@@ -20,46 +20,46 @@
 
     <TextView
         android:id="@+id/viewpager_title_name"
-        android:layout_width="215dp"
+        android:layout_width="240dp"
         android:layout_height="58dp"
-        android:textSize="18dp"
-        android:gravity="center"
-        android:textStyle="bold"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="101dp"
         android:layout_marginLeft="101dp"
         android:layout_marginTop="43dp"
-        android:text="txetview" />
+        android:gravity="center"
+        android:text="txetview"
+        android:textSize="18dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/viewpager_time"
-        android:layout_width="219dp"
+        android:layout_width="240dp"
         android:layout_height="58dp"
-        android:textSize="18dp"
-        android:gravity="center"
-        android:textStyle="bold"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="101dp"
         android:layout_marginLeft="101dp"
         android:layout_marginTop="119dp"
-        android:text="textview" />
+        android:gravity="center"
+        android:text="textview"
+        android:textSize="18dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/viewpager_countdown"
-        android:layout_width="211dp"
+        android:layout_width="240dp"
         android:layout_height="51dp"
-        android:textSize="18dp"
-        android:gravity="center"
-        android:textStyle="bold"
         android:layout_alignBottom="@+id/viewpager_picture"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_marginStart="97dp"
         android:layout_marginLeft="97dp"
         android:layout_marginBottom="32dp"
-        android:text="textview" />
+        android:gravity="center"
+        android:text="textview"
+        android:textSize="18dp"
+        android:textStyle="bold" />
 </RelativeLayout>
