界面修改和存储功能

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#00bfff</color>
     <color name="colorPrimaryDark">#00bfff</color>
     <color name="colorAccent">#00bfff</color>
+    <color name="White">#ffffff</color>
 </resources>
