--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -28,15 +28,14 @@
 
     <TextView
         android:id="@+id/countdown_detail"
-        android:layout_width="185dp"
+        android:layout_width="408dp"
         android:layout_height="50dp"
-        android:textSize="18dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
-        android:textStyle="bold"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="28dp"
         android:text="TextView"
+        android:textSize="22dp"
+        android:textColor="@color/White"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/time_detail" />
 
@@ -174,29 +173,27 @@
 
     <TextView
         android:id="@+id/title_detail"
-        android:layout_width="185dp"
+        android:layout_width="408dp"
         android:layout_height="50dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="92dp"
         android:gravity="center"
         android:text="TextView"
-        android:textSize="18dp"
+        android:textSize="22dp"
+        android:textColor="@color/White"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/time_detail"
-        android:layout_width="185dp"
+        android:layout_width="408dp"
         android:layout_height="50dp"
-        android:textSize="18dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
-        android:textStyle="bold"
-        android:layout_marginStart="104dp"
-        android:layout_marginLeft="104dp"
-        android:layout_marginTop="32dp"
         android:text="TextView"
+        android:textSize="22dp"
+        android:textColor="@color/White"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_detail" />
 
