--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -13,7 +13,7 @@
         android:layout_height="241dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -35,8 +35,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginLeft="80dp"
-        android:textStyle="bold"
+        android:layout_marginTop="8dp"
         android:hint="想说的话，目标，格言..."
+        android:textColor="@color/White"
+        android:textColorHint="@color/White"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tip"
         tools:ignore="DuplicateIds" />
@@ -45,23 +48,27 @@
         android:id="@+id/title"
         android:layout_width="88dp"
         android:layout_height="27dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="80dp"
-        android:textStyle="bold"
+        android:layout_marginStart="84dp"
+        android:layout_marginLeft="84dp"
+        android:layout_marginTop="68dp"
         android:text="标题"
+        android:textColor="@color/White"
+        android:textSize="25dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tip"
         android:layout_width="88dp"
-        android:layout_height="27dp"
+        android:layout_height="30dp"
         android:layout_marginStart="80dp"
         android:layout_marginLeft="80dp"
         android:layout_marginTop="150dp"
-        android:textStyle="bold"
         android:text="备注"
+        android:textColor="@color/White"
+        android:textSize="25dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -88,11 +95,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginLeft="80dp"
-        android:layout_marginTop="104dp"
-        android:textStyle="bold"
+        android:layout_marginTop="100dp"
         android:ems="10"
         android:hint="生日，纪念日，节日，考试..."
         android:inputType="textPersonName"
+        android:textColor="@color/White"
+        android:textColorHint="@color/White"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
