--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -14,29 +14,44 @@
         android:layout_marginStart="0dp"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="20dp"
-        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
+        app:srcCompat="@android:drawable/ic_lock_idle_alarm" /><![CDATA[
 
-    <TextView
-        android:id="@+id/data"
-        android:layout_width="167dp"
-        android:layout_height="36dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="13dp"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="4dp"
-        android:layout_toEndOf="@+id/clock"
+    android:layout_toEndOf="@+id/clock"
         android:layout_toRightOf="@+id/clock"
         android:layout_weight="1"
         android:text="日期" />
 
+    ]]>
+
+    <TextView
+        android:id="@+id/data"
+        android:layout_width="323dp"
+        android:layout_height="49dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="81dp"
+        android:layout_marginLeft="81dp"
+        android:layout_marginTop="7dp"
+        android:textSize="24dp"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/datatip"
-        android:layout_width="193dp"
-        android:layout_height="52dp"
+        android:layout_width="320dp"
+        android:layout_height="47dp"
         android:layout_below="@+id/data"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="85dp"
+        android:layout_marginLeft="85dp"
+        android:layout_marginTop="7dp"
+        android:textSize="20dp"
+        android:textStyle="bold" />
+    android:layout_below="@+id/data"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/clock"
         android:layout_toRightOf="@+id/clock"
         android:text="TextView" />
