--- a/app/src/main/res/layout/mainlayout.xml
+++ b/app/src/main/res/layout/mainlayout.xml
@@ -17,60 +17,61 @@
 
     <TextView
         android:id="@+id/picturetextView"
-        android:layout_width="72dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="54dp"
-        android:layout_marginLeft="54dp"
-        android:layout_marginTop="66dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="51dp"
         android:text="TextView"
-        android:textSize="18dp"
+        android:textSize="20dp"
+        android:textColor="@color/White"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/nametextView"
         android:layout_width="213dp"
         android:layout_height="33dp"
-        android:textSize="18dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="191dp"
-        android:layout_marginLeft="191dp"
-        android:layout_marginTop="25dp"
-        android:text="TextView" />
+        android:layout_marginStart="9dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="12dp"
+        android:layout_toEndOf="@+id/listview_picture"
+        android:layout_toRightOf="@+id/listview_picture"
+        android:gravity="center"
+        android:text="TextView"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/timetextView"
         android:layout_width="209dp"
         android:layout_height="37dp"
-        android:textSize="18dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="189dp"
-        android:layout_marginLeft="189dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="54dp"
-        android:text="TextView" />
+        android:layout_toEndOf="@+id/listview_picture"
+        android:layout_toRightOf="@+id/listview_picture"
+        android:gravity="center"
+        android:text="TextView"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tiptextView"
         android:layout_width="214dp"
         android:layout_height="33dp"
-        android:textSize="18dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="190dp"
-        android:layout_marginLeft="190dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="92dp"
-        android:text="TextView" />
+        android:layout_toEndOf="@+id/listview_picture"
+        android:layout_toRightOf="@+id/listview_picture"
+        android:gravity="center"
+        android:text="TextView"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 </RelativeLayout>
