--- a/app/src/main/res/layout/repetition_layout_listview.xml
+++ b/app/src/main/res/layout/repetition_layout_listview.xml
@@ -6,6 +6,8 @@
         android:id="@+id/repetition_textview"
         android:layout_width="232dp"
         android:layout_height="51dp"
+        android:textSize="20dp"
+        android:textStyle="bold" />
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
