--- a/app/src/main/res/layout/viewpager_layout.xml
+++ b/app/src/main/res/layout/viewpager_layout.xml
@@ -20,46 +20,49 @@
 
     <TextView
         android:id="@+id/viewpager_title_name"
-        android:layout_width="240dp"
-        android:layout_height="58dp"
+        android:layout_width="400dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="101dp"
-        android:layout_marginLeft="101dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="43dp"
         android:gravity="center"
         android:text="txetview"
-        android:textSize="18dp"
+        android:textSize="25dp"
+        android:textColor="@color/White"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/viewpager_time"
-        android:layout_width="240dp"
-        android:layout_height="58dp"
+        android:layout_width="408dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/viewpager_title_name"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="101dp"
-        android:layout_marginLeft="101dp"
-        android:layout_marginTop="119dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
         android:gravity="center"
         android:text="textview"
-        android:textSize="18dp"
+        android:textSize="20dp"
+        android:textColor="@color/White"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/viewpager_countdown"
-        android:layout_width="240dp"
-        android:layout_height="51dp"
-        android:layout_alignBottom="@+id/viewpager_picture"
+        android:layout_width="406dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/viewpager_time"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="97dp"
-        android:layout_marginLeft="97dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
         android:gravity="center"
         android:text="textview"
-        android:textSize="18dp"
+        android:textColor="@color/White"
+        android:textSize="20dp"
         android:textStyle="bold" />
 </RelativeLayout>
