--- a/app/src/main/res/layout/mainlayout.xml
+++ b/app/src/main/res/layout/mainlayout.xml
@@ -32,7 +32,7 @@
 
     <TextView
         android:id="@+id/nametextView"
-        android:layout_width="213dp"
+        android:layout_width="222dp"
         android:layout_height="33dp"
         android:layout_alignParentTop="true"
         android:layout_marginStart="9dp"
@@ -47,12 +47,12 @@
 
     <TextView
         android:id="@+id/timetextView"
-        android:layout_width="209dp"
+        android:layout_width="227dp"
         android:layout_height="37dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="54dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="48dp"
         android:layout_toEndOf="@+id/listview_picture"
         android:layout_toRightOf="@+id/listview_picture"
         android:gravity="center"
@@ -62,11 +62,11 @@
 
     <TextView
         android:id="@+id/tiptextView"
-        android:layout_width="214dp"
-        android:layout_height="33dp"
+        android:layout_width="222dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="13dp"
-        android:layout_marginLeft="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="92dp"
         android:layout_toEndOf="@+id/listview_picture"
         android:layout_toRightOf="@+id/listview_picture"
