--- a/app/src/main/res/layout/repetition_layout.xml
+++ b/app/src/main/res/layout/repetition_layout.xml
@@ -19,15 +19,15 @@
 
     <ListView
         android:id="@+id/repetition_listview"
-        android:layout_width="match_parent"
+        android:layout_width="391dp"
         android:layout_height="307dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="-6dp"
-        android:layout_marginLeft="-6dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="6dp"
         android:layout_marginRight="6dp" />
