布局优化，（23号最终版）

--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="55dp"
         android:ems="10"
         android:hint="选择周期：  天"
-        android:inputType="textPersonName" />
+        android:inputType="number" />
 
     <Button
         android:id="@+id/sure_button_custom"
